[gd_scene load_steps=49 format=2]

[ext_resource path="res://GUI/Win/win_screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/19.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/14.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/7.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/20.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/17-GUI/Big Text/1.png" type="Texture" id=7]
[ext_resource path="res://GUI/Recursos_gui/green_panel.tres" type="TileSet" id=8]
[ext_resource path="res://Recursos/Fuentes/PressStart2P-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Sprites/17-GUI/Prefabs/9.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/17-GUI/Prefabs/5.png" type="Texture" id=11]
[ext_resource path="res://GUI/Recursos_gui/big_banner.tres" type="TileSet" id=12]
[ext_resource path="res://GUI/Recursos_gui/yellow_button.tres" type="TileSet" id=13]
[ext_resource path="res://GUI/Recursos_gui/small_banner.tres" type="TileSet" id=14]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/menu_white.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/17-GUI/volver_jugar_white.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/menu_black.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/17-GUI/volver_jugar_black.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/salir_white.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/17-GUI/small_icon_white/salir_black.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/1.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/5.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/20.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/4.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/19.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/3.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/9.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/13.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/15.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/18.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/12-Live and Coins/Small Diamond (18x14).png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/50.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/17-GUI/Small Text/Small Text/24.png" type="Texture" id=33]

[sub_resource type="Animation" id=1]
resource_name = "win"
length = 29.6
tracks/0/type = "value"
tracks/0/path = NodePath("titulo:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.4, 1.9, 2.3, 2.7, 3.1, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 6, 6 ), Vector2( 8, 8 ), Vector2( 6, 6 ), Vector2( 8, 8 ), Vector2( 6, 6 ), Vector2( 8, 8 ), Vector2( 6, 6 ), Vector2( 8, 8 ), Vector2( 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("titulo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 300 ), Vector2( 512, 300 ), Vector2( 512, 75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("prologo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 4, 5, 28.5, 29.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("prologo/Label:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5, 6, 6.4, 9, 9.6, 13, 13.4, 20.9, 21.5, 24, 25, 26.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.098, 0.098, 0.338, 0.338, 0.515, 0.515, 0.845, 0.845, 0.95, 0.946455, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("menu:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 28.5, 29, 29.1, 29.2, 29.3, 29.4, 29.5, 29.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 800 ), Vector2( 512, 800 ), Vector2( 512, 270 ), Vector2( 512, 280 ), Vector2( 512, 290 ), Vector2( 512, 270 ), Vector2( 512, 280 ), Vector2( 512, 290 ), Vector2( 512, 280 ) ]
}

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0.945098, 0.85098, 0.752941, 1 )
use_mipmaps = true
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 9 )

[sub_resource type="TileSet" id=3]
0/name = "5.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 31 )
region = Rect2( 18, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 31 )
region = Rect2( 36, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 31 )
region = Rect2( 54, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 31 )
region = Rect2( 72, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 31 )
region = Rect2( 90, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 31 )
region = Rect2( 108, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 31 )
region = Rect2( 126, 0, 18, 14 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=13]
outline_size = 1
outline_color = Color( 0.917647, 0.772549, 0.619608, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
outline_size = 1
outline_color = Color( 0.917647, 0.772549, 0.619608, 1 )
extra_spacing_char = 3
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=15]
outline_size = 1
outline_color = Color( 0.917647, 0.772549, 0.619608, 1 )
font_data = ExtResource( 9 )

[node name="win_screen" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "win"
anims/win = SubResource( 1 )

[node name="titulo" type="Node2D" parent="."]
position = Vector2( 512, 75 )
scale = Vector2( 6, 6 )
z_index = 2
__meta__ = {
"_edit_group_": true
}

[node name="G" type="Sprite" parent="titulo"]
texture = ExtResource( 4 )
offset = Vector2( -30, 0 )

[node name="A" type="Sprite" parent="titulo"]
texture = ExtResource( 7 )
offset = Vector2( -20, 0 )

[node name="N" type="Sprite" parent="titulo"]
texture = ExtResource( 3 )
offset = Vector2( -10, 0 )

[node name="A2" type="Sprite" parent="titulo"]
texture = ExtResource( 7 )

[node name="S" type="Sprite" parent="titulo"]
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )

[node name="T" type="Sprite" parent="titulo"]
texture = ExtResource( 6 )
offset = Vector2( 20, 0 )

[node name="E" type="Sprite" parent="titulo"]
texture = ExtResource( 5 )
offset = Vector2( 30, 0 )

[node name="prologo" type="Node2D" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1e-05, 1e-05 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="TileMap" type="TileMap" parent="prologo"]
scale = Vector2( 3, 3 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65540, 0, 0, -65539, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 2, 0, -4, 3, 0, -3, 4, 0, -2, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 5, 0, 65532, 3, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 5, 0, 131068, 6, 0, 131069, 7, 0, 131070, 7, 0, 131071, 7, 0, 65536, 7, 0, 65537, 7, 0, 65538, 7, 0, 65539, 8, 0 )

[node name="Sprite" type="Sprite" parent="prologo"]
position = Vector2( 4.18595, 0.154566 )
scale = Vector2( 6.6112, 2.95946 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="prologo"]
margin_left = -317.0
margin_top = -135.236
margin_right = 327.0
margin_bottom = 134.764
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.247059, 0.219608, 0.317647, 1 )
text = "El reino de los cerdonios a caido, muchos han sido condenados a la horca por haberse sublevado contra el rey Alejandro.
Ahora todo se encuentra bien el rey esta gobernando otra vez, los cerdonios ahora sirven fielmente al rey bajo amenaza de ser ejecutados si  intentan tomar el castillo otra vez.

El rey Alejandro obtuvo la victoria

¿Pero a que costo?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Node2D" parent="."]
position = Vector2( 512, 280 )
z_index = 2

[node name="panel" type="TileMap" parent="menu"]
scale = Vector2( 2.5, 2.5 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65538, 0, 0, -65537, 0, 1, -131072, 0, 1, -131071, 0, 2, -2, 0, 65536, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65538, 65534, 0, 65536, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65538, 131070, 0, 131072, 131071, 0, 131073, 65536, 0, 131073, 65537, 0, 131074, 196606, 0, 0, 196607, 0, 1, 131072, 0, 1, 131073, 0, 2, 262142, 0, 131072, 262143, 0, 131073, 196608, 0, 131073, 196609, 0, 131074 )

[node name="banner" type="TileMap" parent="menu"]
scale = Vector2( 3.5, 2.5 )
tile_set = ExtResource( 12 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65538, 0, 0, -65537, 28, 0, -131072, 28, 0, -131071, 7, 0, -2, 2, 0, -1, 29, 0, -65536, 29, 0, -65535, 3, 0, 65534, 2, 0, 65535, 29, 0, 0, 29, 0, 1, 3, 0, 131070, 4, 0, 131071, 30, 0, 65536, 30, 0, 65537, 16, 0 )

[node name="button_1" type="TileMap" parent="menu"]
position = Vector2( -5.28821, 16.379 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 13 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 524286, 7, 0, 524287, 8, 0, 458752, 8, 0, 458753, 9, 0, 589822, 13, 0, 589823, 14, 0, 524288, 14, 0, 524289, 15, 0 )

[node name="button_2" type="TileMap" parent="menu"]
position = Vector2( -16.1848, -0.667419 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 13 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 524282, 7, 0, 524283, 8, 0, 524284, 8, 0, 524285, 9, 0, 589818, 10, 0, 589819, 11, 0, 589820, 11, 0, 589821, 12, 0, 655354, 13, 0, 655355, 14, 0, 655356, 14, 0, 655357, 15, 0 )

[node name="button_3" type="TileMap" parent="menu"]
position = Vector2( 115.464, 197.556 )
scale = Vector2( 3, 3 )
tile_set = ExtResource( 14 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 8, 0, 0, 1, 0 )

[node name="salir" type="TextureButton" parent="menu"]
margin_left = 70.0
margin_top = 229.0
margin_right = 151.0
margin_bottom = 255.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="TextureButton" parent="menu"]
margin_left = -55.0
margin_top = 218.0
margin_right = 44.0
margin_bottom = 258.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volver" type="TextureButton" parent="menu"]
margin_left = -177.0
margin_top = 202.0
margin_right = -79.0
margin_bottom = 268.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 16 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_estadisticas" type="Node2D" parent="menu"]
position = Vector2( -131.653, -79.2691 )
scale = Vector2( 4, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="E" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 22 )

[node name="S" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 25 )
offset = Vector2( 6, 0 )

[node name="T" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 23 )
offset = Vector2( 12, 0 )

[node name="A" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 21 )
offset = Vector2( 18, 0 )

[node name="D" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 24 )
offset = Vector2( 24, 0 )

[node name="I" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 27 )
offset = Vector2( 30, 0 )

[node name="S2" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 25 )
offset = Vector2( 36, 0 )

[node name="T2" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 23 )
offset = Vector2( 42, 0 )

[node name="I2" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 27 )
offset = Vector2( 48, 0 )

[node name="C" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 26 )
offset = Vector2( 54, 0 )

[node name="A2" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 21 )
offset = Vector2( 60, 0 )

[node name="S3" type="Sprite" parent="menu/text_estadisticas"]
texture = ExtResource( 25 )
offset = Vector2( 66, 0 )

[node name="diamantes" type="Node2D" parent="menu"]
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="menu/diamantes"]
position = Vector2( -45.2548, 70.7106 )
scale = Vector2( 3, 3 )
frames = SubResource( 12 )
frame = 5
playing = true

[node name="diamantes" type="Label" parent="menu/diamantes"]
margin_left = -13.435
margin_top = 55.0
margin_right = 34.565
margin_bottom = 71.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.235294, 0.501961, 0.333333, 1 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Node2D" parent="menu"]
__meta__ = {
"_edit_group_": true
}

[node name="text_score" type="Node2D" parent="menu/score"]
position = Vector2( -131.653, -32.2962 )
scale = Vector2( 3, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="S4" type="Sprite" parent="menu/score/text_score"]
texture = ExtResource( 25 )

[node name="C2" type="Sprite" parent="menu/score/text_score"]
texture = ExtResource( 26 )
offset = Vector2( 6, 0 )

[node name="O2" type="Sprite" parent="menu/score/text_score"]
texture = ExtResource( 29 )
offset = Vector2( 12, 0 )

[node name="R2" type="Sprite" parent="menu/score/text_score"]
texture = ExtResource( 30 )
offset = Vector2( 18, 0 )

[node name="E2" type="Sprite" parent="menu/score/text_score"]
texture = ExtResource( 22 )
offset = Vector2( 24, 0 )

[node name="double_dot" type="Sprite" parent="menu/score/text_score"]
texture = ExtResource( 32 )
offset = Vector2( 30, 0 )

[node name="score" type="Label" parent="menu/score"]
margin_left = -19.5856
margin_top = -53.1213
margin_right = 63.4144
margin_bottom = -25.1213
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.282353, 0.321569, 0.776471, 1 )
text = "0000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_score" type="Node2D" parent="menu"]
__meta__ = {
"_edit_group_": true
}

[node name="text_max_score" type="Node2D" parent="menu/max_score"]
position = Vector2( -64.4781, 24.9794 )
scale = Vector2( 3, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="S4" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 25 )

[node name="C2" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 26 )
offset = Vector2( 6, 0 )

[node name="O2" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 29 )
offset = Vector2( 12, 0 )

[node name="R2" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 30 )
offset = Vector2( 18, 0 )

[node name="E2" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 22 )
offset = Vector2( 24, 0 )

[node name="double_dot" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 32 )
offset = Vector2( 30, 0 )

[node name="M" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 28 )
offset = Vector2( -24, 0 )

[node name="A" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 21 )
offset = Vector2( -18, 0 )

[node name="X" type="Sprite" parent="menu/max_score/text_max_score"]
texture = ExtResource( 33 )
offset = Vector2( -12, 0 )

[node name="max_score" type="Label" parent="menu/max_score"]
margin_left = 38.1838
margin_top = 12.7279
margin_right = 102.184
margin_bottom = 28.7279
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 0.164706, 0.164706, 1 )
text = "0000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="menu/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="menu/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="menu/volver" to="." method="_on_volver_pressed"]
